simplistic fix for too narrow TOC when no other tabs available
This simply sets a minimum width and right alings the panel. I'm open
for better suggestions.

--- a/css/area_nav-metabox.less
+++ b/css/area_nav-metabox.less
@@ -111,8 +111,10 @@
         .tab-pane {
             position: absolute;
             top: 0;
+            right: 0;
             display: none;
             width: 100%;
+            min-width: 20em;
             background-color: @color-content-bg;
             border: 1px solid @color-link;
             border-top-color: transparent;
